--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-11 18:25-0500\n"
+"POT-Creation-Date: 2010-04-12 09:41-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -6340,40 +6340,84 @@ msgstr "插入影响因素 \t\t"
 msgid "TT|Insert a Contributing Factor"
 msgstr "插入一项影响因素 \t\t"
 
-#: Miradi/source/org/miradi/actions/MainWindowAction.java:86
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:87
 msgid ""
 "Attempted to execute command as side effect before any command had been "
 "executed "
 msgstr ""
 
-#: Miradi/source/org/miradi/actions/MainWindowAction.java:89
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:90
 msgid ""
 "Attempt to execute command while in side effect mode:\n"
 " tried  "
 msgstr ""
 
-#: Miradi/source/org/miradi/actions/MainWindowAction.java:90
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:91
 msgid ""
 "\n"
 "  within "
 msgstr ""
 
-#: Miradi/source/org/miradi/actions/MainWindowAction.java:97
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:98
 msgid "An internal error prevented this operation"
 msgstr "一个内部错误阻止了该操作 \t\t"
 
-#: Miradi/source/org/miradi/actions/MainWindowAction.java:105
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:106
 msgid "An unexpected error has occurred."
 msgstr ""
 
-#: Miradi/source/org/miradi/actions/MainWindowAction.java:106
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:107
 msgid ""
 "<br> The operation completed successfully, but Undo/Redo may not work "
 "correctly."
 msgstr ""
 
-#: Miradi/source/org/miradi/actions/MainWindowAction.java:107
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:108
 msgid "<br> Please report this problem to the Miradi support team "
+msgstr ""
+
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:144
+msgid ""
+"Miradi could not complete that operation because it ran out of memory.\n"
+"This can happen if you try to export a huge image, for example.\n"
+"\n"
+"You can make more memory available to Miradi by creating or editing\n"
+"a text file named 'Miradi.vmoptions', in the Miradi program folder\n"
+"(which is typically C:\\Program Files\\Miradi). In Miradi.voptions,\n"
+"make sure there is a line like this:\n"
+"    -Xmx800m\n"
+"That will allow Miradi to use up to 800 megabytes of RAM.\n"
+"If you continue to get this error, try larger numbers (like -Xmx1000m).\n"
+msgstr ""
+
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:156
+msgid ""
+"Miradi could not complete that operation because it ran out of memory.\n"
+"This can happen if you try to export a huge image, for example.\n"
+"\n"
+"You can make more memory available to Miradi by passing a command-line \n"
+"parameter in the java command used to launch Miradi.\n"
+"Try adding this to the command line:\n"
+"   -Xmx800m\n"
+"That will allow Miradi to use up to 800 megabytes of RAM.\n"
+"If you continue to get this error, try larger numbers (like -Xmx1000m).\n"
+msgstr ""
+
+#: Miradi/source/org/miradi/actions/MainWindowAction.java:167
+msgid ""
+"Miradi could not complete that operation because it ran out of memory.\n"
+"This can happen if you try to export a huge image, for example.\n"
+"\n"
+"You can make more memory available to Miradi by editing the plist.info file\n"
+"that is inside the Miradi application bundle. Instead of double-clicking\n"
+"on the Miradi application, Control-click and choose 'Show Package "
+"Contents'.\n"
+"Then, double-click on plist.info to bring it up in an editor.\n"
+"\n"
+"Find the entry starting with -Xmx and increase the number, like:\n"
+"   -Xmx800m\n"
+"That will allow Miradi to use up to 800 megabytes of RAM.\n"
+"If you continue to get this error, try larger numbers (like -Xmx1000m).\n"
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionShowCellRatings.java:34
