Hudson build: hudson-Miradi-4631; 2010-04-12_10-13-13

--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-12 09:41-0500\n"
+"POT-Creation-Date: 2010-04-12 10:14-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -6671,7 +6671,7 @@ msgid ""
 "\n"
 "You can make more memory available to Miradi by creating or editing\n"
 "a text file named 'Miradi.vmoptions', in the Miradi program folder\n"
-"(which is typically C:\\Program Files\\Miradi). In Miradi.voptions,\n"
+"(which is typically C:\\Program Files\\Miradi). In Miradi.vmoptions,\n"
 "make sure there is a line like this:\n"
 "    -Xmx800m\n"
 "That will allow Miradi to use up to 800 megabytes of RAM.\n"
