--- a/translations/miradi_id.po
+++ b/translations/miradi_id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-13 10:18-0500\n"
+"POT-Creation-Date: 2010-04-13 10:22-0500\n"
 "PO-Revision-Date: 2009-12-17 09:22-0500\n"
 "Last-Translator: Lucy Tickell <ltickell@globalarena.com>\n"
 "Language-Team: Indonesian\n"
@@ -453,11 +453,11 @@ msgstr ""
 
 #: Miradi/source/org/miradi/views/summary/SummaryPlanningWorkPlanSubPanel.java:116
 msgid ""
-"Quarter columns cannot be hidden because this project already has data for "
-"some quarters."
+"NOTE: Quarter columns cannot be hidden because this project already has data "
+"for some quarters."
 msgstr ""
 
-#: Miradi/source/org/miradi/views/summary/SummaryPlanningWorkPlanSubPanel.java:272
+#: Miradi/source/org/miradi/views/summary/SummaryPlanningWorkPlanSubPanel.java:286
 msgid "Work Plan Settings"
 msgstr "Pengaturan Rencana Kerja "
 
