--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-15 16:21-0500\n"
+"POT-Creation-Date: 2010-04-16 09:46-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -4491,7 +4491,9 @@ msgid "Existing data for a different fiscal year is being excluded"
 msgstr ""
 
 #: Miradi/source/org/miradi/main/MainWindow.java:687
-msgid "Start %startDate date is after end date %endDate"
+msgid ""
+"Start date (currently %startDate) must be earlier than end date (currently %"
+"endDate)"
 msgstr ""
 
 #: Miradi/source/org/miradi/main/MainWindow.java:843
