Hudson build: hudson-Miradi-4688; 2010-04-16_16-18-53

--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-16 12:19-0500\n"
+"POT-Creation-Date: 2010-04-16 16:20-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -13208,7 +13208,7 @@ msgid ""
 "display the Future Status value, along with a blue oval icon, in the cell of "
 "the monitoring table corresponding to the desired future status.</P><p>If "
 "you want to use an existing indicator from another factor, click on the "
-"<code class='toolbarbutton'>&lt;Clone&nbsp;From&nbsp;Existing&gt;</code> "
+"<code class='toolbarbutton'>&lt;Create&nbsp;From&nbsp;Existing&gt;</code> "
 "button and follow the instructions. To edit or delete an indicator, click on "
 "the desired row and then either edit the text in the box at the bottom or "
 "click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Indicator&gt;</"
@@ -13367,7 +13367,7 @@ msgid ""
 "li><li><strong>Progress Percents:</strong>Use this side tab to enter "
 "progress percent updates for this objective.</ul> <p>If you want to use an "
 "existing objective from another factor, click on the <code "
-"class='toolbarbutton'>&lt;Clone&nbsp;From&nbsp;Existing&gt;</code> button "
+"class='toolbarbutton'>&lt;Create&nbsp;From&nbsp;Existing&gt;</code> button "
 "and follow the instructions. To edit or delete an objective, click on the "
 "desired row and then either edit the text in the box at the bottom or click "
 "on the <code class='toolbarbutton'>&lt;Delete&nbsp;Objective&gt;</code> "
@@ -13499,9 +13499,9 @@ msgid ""
 "class='definition'>stresses</a> that affect your conservation targets. If "
 "you want to use stresses, double click on a target, and click on the <code "
 "class='toolbarbutton'>&lt;Stresses&gt;</code> tab in the target properties "
-"window. Click on the buttons to create a new stress, clone an existing "
-"stress, or create a stress from one of your KEAs. For each stress, you can "
-"then fill in the <strong>ID</strong>, <strong>name</strong>, and "
+"window. Click on the buttons to create a new stress, create a stress from an "
+"existing stress, or create a stress from one of your KEAs. For each stress, "
+"you can then fill in the <strong>ID</strong>, <strong>name</strong>, and "
 "<strong>details</strong> fields. You can also click the <code "
 "class='toolbarbutton'>&lt;Stress Visibility&gt;</code> side tab and then the "
 "<code class='toolbarbutton'>&lt;Show Stress on this page&gt;</code> button "
@@ -13534,7 +13534,7 @@ msgid ""
 "strong> The complete goal statement that meets the criteria for a good goal."
 "<li><strong>Comments:</strong> Any additional comments about the goal.</li></"
 "ul> <br></br>If you want to use an existing goal from another target, click "
-"on the <code class='toolbarbutton'>&lt;Clone&nbsp;From&nbsp;Existing&gt;</"
+"on the <code class='toolbarbutton'>&lt;Create&nbsp;From&nbsp;Existing&gt;</"
 "code> button and follow the instructions.\tTo edit or delete a goal, click "
 "on the desired row and then either edit the text in the box at the bottom or "
 "click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Goal&gt;</code> "
