Hudson build: hudson-Miradi-4693; 2010-04-19_13-30-53

--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-16 16:20-0500\n"
+"POT-Creation-Date: 2010-04-19 13:32-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -4330,7 +4330,7 @@ msgid "Both"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:39
-msgid "Result Chain Data"
+msgid "Results Chain Data"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:40
