--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-20 11:23-0500\n"
+"POT-Creation-Date: 2010-04-20 11:25-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -1021,7 +1021,7 @@ msgstr ""
 msgid "Error during undo"
 msgstr "撤销时出错 \t\t"
 
-#: Miradi/source/org/miradi/views/umbrella/Definition.java:58
+#: Miradi/source/org/miradi/views/umbrella/Definition.java:59
 msgid "(Definition Not Available)"
 msgstr "（无可用定义） \t\t"
 
@@ -1662,7 +1662,7 @@ msgstr ""
 "分解成亚任务。在Miradi中，任务是以灰色扁椭圆形来代表的。"
 
 #: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:207
-#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:53
+#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:50
 msgid "Quarter"
 msgstr "季度"
 
@@ -1987,16 +1987,17 @@ msgid ""
 msgstr ""
 
 #: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:334
+#: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:337
 msgid "Threat Calculations"
 msgstr ""
 "未来期望状态——针对此项目欲在未来特定时间取得的关键生态学属性，对其指示物所作"
 "的测量或分级数值。通常相当于项目的亚目标。"
 
-#: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:337
+#: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:340
 msgid "Bundle Rules"
 msgstr "规则集"
 
-#: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:348
+#: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:351
 msgid "Undefined"
 msgstr "未定义"
 
@@ -2665,23 +2666,23 @@ msgstr "快速评估"
 msgid "Intensive Assessment"
 msgstr "周密评估"
 
-#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:48
+#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:45
 msgid "None"
 msgstr ""
 
-#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:50
+#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:47
 msgid "Project Total"
 msgstr ""
 
-#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:51
+#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:48
 msgid "Year"
 msgstr ""
 
-#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:55
+#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:52
 msgid "Month"
 msgstr ""
 
-#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:56
+#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:53
 msgid "Day"
 msgstr ""
 
@@ -9108,6 +9109,28 @@ msgstr ""
 "table><p><strong>WWF项目的专门字段：</p></div> \t\t"
 
 msgid ""
+"html|/resources/ThreatRatingExplanationOfStressBasedCalculation.html|  "
+"<html><h3>Explanation of How Target-Threat Ratings Are Calculated (Stress "
+"Based Mode)</h3><p>In stress based mode, Scope and Severity ranks are "
+"combined to create Threat Magnitude.  Irreversibility is combined with "
+"Contribution to create the Source of Stress Ranking, and then Threat "
+"Magnitude and Source of Stress Rankings are combined to create the Summary "
+"Stress Rating.</p><p><b>Stress Ranking (Threat Magnitude):</b> Each stress "
+"is given a rank for Severity and Scope. A rule-based procedure is then used "
+"to combine the rankings for the Scope and Severity variables to get a "
+"ranking of Threat Magnitude.  Under these rules, if a threat is rated 'low' "
+"on either variable, then the magnitude is 'low' overall. </p><img src="
+"\"images/StressBasedRules1.png\"  width='436' height='135'><p><b>Source of "
+"Stress Ranking:</b> A source rank is the calculated by combining the "
+"rankings for Contribution and Irreversibility as shown in the matrix below.</"
+"p><img src=\"images/StressBasedRules2.png\"  width='440' "
+"height='149'><p><b>Combining Stress and Source Ranks:</b> The source rank "
+"calculated from the first matrix is then combined with the stress rank which "
+"was calculated from the Stress Ranking matrix as shown in the matrix below.</"
+"p><img src=\"images/StressBasedRules3.png\"  width='438' height='138'></html>"
+msgstr ""
+
+msgid ""
 "html|/resources/AboveToolbarInstructions.html|<HTML><p>You can browse "
 "through the report preview below. When ready, you can print it or save it to "
 "disk in a variety of output formats, using the appropriate toolbar buttons. "
@@ -14251,7 +14274,7 @@ msgid ""
 "magnitude and source ranks are then used to calculate the summary stress "
 "rating and the summary stress ratings are then used to calculate the rank of "
 "a threat to a target which is what is displayed in the threat ratings table. "
-"<a href='Definition:ShowRulesStressCalculations'>Click here</a> for a "
+"<a href='Definition:ShowStressBasedRulesCalculations'>Click here</a> for a "
 "detailed description of how Miradi calculates the rank for a specific threat "
 "to a target, and <a href='Definition:ShowRulesBundles'>click here</a> for a "
 "detailed description of how Miradi calculates row and column totals.</p></"
