--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-22 10:29-0500\n"
+"POT-Creation-Date: 2010-04-22 11:08-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -5266,6 +5266,10 @@ msgstr "落实真相与修订模型 \t\t"
 #: Miradi/source/org/miradi/actions/jump/ActionJumpRankDraftStrategiesStep.java:35
 msgid "Rank draft strategies"
 msgstr "评定策略草案 \t\t"
+
+#: Miradi/source/org/miradi/actions/jump/ActionJumpDiagramWizardHumanWelfareTargetsStep.java:36
+msgid "Add Human Welfare Targets If Desired"
+msgstr ""
 
 #: Miradi/source/org/miradi/actions/jump/ActionJumpDiagramWizardIdentifyIndirectThreatStep.java:35
 msgid "Identify indirect threats and opportunities"
@@ -12760,55 +12764,6 @@ msgid ""
 msgstr ""
 
 msgid ""
-"html|/resources/wizard/DiagramView/DiagramWizardVisionStepLeft.html|Starting "
-"with Version 3.0, Miradi now provides an option to display <a "
-"href='Definition:HumanWelfareTargets' class='definition'> human welfare "
-"targets</a> alongside your focal conservation targets.<p>If you want to use "
-"human welfare targets, you must first go to the <code "
-"class='toolbarbutton'>&lt;Edit/Preferences/Project Settings&gt;</code> menu "
-"and change the mode from <i>\"Default Mode\"</i> to <i>\"Human Welfare "
-"Target Mode.\"</i> You will now have the ability to enter brown Human "
-"Welfare scope boxes and tan colored human welfare targets.</p><p "
-"class='hint'><strong>New Feature Hint:</strong> Human welfare targets have "
-"all the same properties as conservation targets except that you cannot "
-"assign them a habitat classification or a species Latin name. They also do "
-"not factor into viability roll-up calculations.</p> "
-msgstr ""
-
-msgid ""
-"html|/resources/wizard/DiagramView/DiagramWizardVisionStepRight.html|"
-"<h3>Using Human Welfare Targets</h3>Some conservaton projects have not only "
-"conservation ends, but also have human welfare ends. Based on user requests, "
-"Miradi now supports <i>Human Welfare Targets</i>. Just as focal conservation "
-"targets represent the overall biodiversity values that a project is working "
-"towards, the human welfare targets can be used to represent the human "
-"welfare values for a project. Examples of human welfare targets might "
-"include:<ul><li>Human population health,</li><li>Human food security,</"
-"li><li>Protection against flooding,</li><li>Recreation opportunities.</li></"
-"ul><p>Miradi places no restrictions on how you choose to use human welfare "
-"targets. However, we <u>strongly recommend</u> that you do not mix "
-"conservation targets and human welfare targets in the same column as shown "
-"in Diagram A below. Instead, the recommended practice is to place the human "
-"welfare targets to the far right and then show the relationship between the "
-"human welfare and conservation targets as shown in Diagram B. In this "
-"example, the project team can show that human health (one component of human "
-"welfare) ultimately depends on having healthy species and habitat and clean "
-"abundant water. As a result, a pollution abatement strategy can be a "
-"conservation action - but also contributes to human welfare. But the project "
-"team can also decide and then show that they are not going to address all "
-"aspects of human health. For example, as shown in the diagram the team will "
-"not tackle smoking or fixing the health care system - these important tasks "
-"are the responsibility of other sectors of society.</p><table "
-"width='100%'><tr><td align='center'><img src='images/DiagramWizard/HWT-"
-"diagramA.png' width='420' height='345'></img><br><b>Diagram A. Mixing "
-"Conservation and Human Welfare Targets Leads to Confusion</b></td></tr></"
-"table><p></p><table width='100%'><tr><td align='center'><img src='images/"
-"DiagramWizard/HWT-diagramB.png' width='420' height='280'></"
-"img><br><b>Diagram B. Show the Relationship Between Conservation and Human "
-"Welfare Targets</b></td></tr></table><p></p> "
-msgstr ""
-
-msgid ""
 "html|/resources/wizard/DiagramView/TargetViabilityMethodChoiceStepLeft.html|"
 "Miradi currently supports two different viability analysis modes for "
 "assessing target status. Generally, within a project you should consistently "
@@ -13251,6 +13206,39 @@ msgid ""
 msgstr ""
 
 msgid ""
+"html|/resources/wizard/DiagramView/DiagramWizardHumanWelfareTargetsStepRight."
+"html|<h3>Using Human Welfare Targets</h3>Some conservaton projects have not "
+"only conservation ends, but also have human welfare ends. Based on user "
+"requests, Miradi now supports <i>Human Welfare Targets</i>. Just as focal "
+"conservation targets represent the overall biodiversity values that a "
+"project is working towards, the human welfare targets can be used to "
+"represent the human welfare values for a project. Examples of human welfare "
+"targets might include:<ul><li>Human population health,</li><li>Human food "
+"security,</li><li>Protection against flooding,</li><li>Recreation "
+"opportunities.</li></ul><p>Miradi places no restrictions on how you choose "
+"to use human welfare targets. However, we <u>strongly recommend</u> that you "
+"do not mix conservation targets and human welfare targets in the same column "
+"as shown in Diagram A below. Instead, the recommended practice is to place "
+"the human welfare targets to the far right and then show the relationship "
+"between the human welfare and conservation targets as shown in Diagram B. In "
+"this example, the project team can show that human health (one component of "
+"human welfare) ultimately depends on having healthy species and habitat and "
+"clean abundant water. As a result, a pollution abatement strategy can be a "
+"conservation action - but also contributes to human welfare. But the project "
+"team can also decide and then show that they are not going to address all "
+"aspects of human health. For example, as shown in the diagram the team will "
+"not tackle smoking or fixing the health care system - these important tasks "
+"are the responsibility of other sectors of society.</p><table "
+"width='100%'><tr><td align='center'><img src='images/DiagramWizard/HWT-"
+"diagramA.png' width='420' height='345'></img><br><b>Diagram A. Mixing "
+"Conservation and Human Welfare Targets Leads to Confusion</b></td></tr></"
+"table><p></p><table width='100%'><tr><td align='center'><img src='images/"
+"DiagramWizard/HWT-diagramB.png' width='420' height='280'></"
+"img><br><b>Diagram B. Show the Relationship Between Conservation and Human "
+"Welfare Targets</b></td></tr></table><p></p> "
+msgstr ""
+
+msgid ""
 "html|/resources/wizard/DiagramView/"
 "DiagramWizardCompleteResultsChainLinksRight.html|<div class='navigation'>\t\t"
 "\t\t            There are several different ways to approach building a "
@@ -13321,6 +13309,22 @@ msgid ""
 "strong> In most Miradi dialogue boxes, the <strong>Details</strong> field is "
 "used to record a longer description of the factor, whereas the "
 "<strong>Comments</strong> field is meant for discussion about the factor.</p>"
+msgstr ""
+
+msgid ""
+"html|/resources/wizard/DiagramView/DiagramWizardHumanWelfareTargetsStepLeft."
+"html|Starting with Version 3.0, Miradi now provides an option to display <a "
+"href='Definition:HumanWelfareTargets' class='definition'> human welfare "
+"targets</a> alongside your focal conservation targets.<p>If you want to use "
+"human welfare targets, you must first go to the <code "
+"class='toolbarbutton'>&lt;Edit/Preferences/Project Settings&gt;</code> menu "
+"and change the mode from <i>\"Default Mode\"</i> to <i>\"Human Welfare "
+"Target Mode.\"</i> You will now have the ability to enter brown Human "
+"Welfare scope boxes and tan colored human welfare targets.</p><p "
+"class='hint'><strong>New Feature Hint:</strong> Human welfare targets have "
+"all the same properties as conservation targets except that you cannot "
+"assign them a habitat classification or a species Latin name. They also do "
+"not factor into viability roll-up calculations.</p> "
 msgstr ""
 
 msgid ""
