--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-22 11:28-0500\n"
+"POT-Creation-Date: 2010-04-22 11:43-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -9160,9 +9160,10 @@ msgstr ""
 msgid ""
 "html|/resources/FteDaysPerYearDialogExplanation.html|<p>Enter a value below "
 "to assign a fraction of a Full Time Employee (FTE) for the selected work "
-"item and time period. Miradi will convert the percentage to the appropriate "
-"number of days, according to the Planning configuration setting which is "
-"shown here.</p>"
+"item and time period. Miradi will use the fraction to calculate the "
+"appropriate number of days using the FTE Days Per Year value shown below. "
+"The FTE Days Per Year value is set in Work Plan Settings under the Planning "
+"tab in the Summary view.</p>"
 msgstr ""
 
 msgid ""
