--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-22 11:43-0500\n"
+"POT-Creation-Date: 2010-04-22 12:11-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -4331,15 +4331,15 @@ msgid "Stakeholder"
 msgstr "Parte interesada "
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:38
-msgid "Both"
+msgid "Conceptual Model Pages and Results Chains"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:39
-msgid "Results Chain Data"
+msgid "Only Conceptual Model Pages"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:40
-msgid "Conceptual Model Data"
+msgid "Only Results Chains"
 msgstr ""
 
 #: Miradi/source/org/miradi/diagram/arranger/MeglerArranger.java:78
