--- a/translations/miradi_id.po
+++ b/translations/miradi_id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-22 11:43-0500\n"
+"POT-Creation-Date: 2010-04-22 12:11-0500\n"
 "PO-Revision-Date: 2009-12-17 09:22-0500\n"
 "Last-Translator: Lucy Tickell <ltickell@globalarena.com>\n"
 "Language-Team: Indonesian\n"
@@ -4299,15 +4299,15 @@ msgid "Stakeholder"
 msgstr "Pemilik Kepentingan"
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:38
-msgid "Both"
+msgid "Conceptual Model Pages and Results Chains"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:39
-msgid "Results Chain Data"
+msgid "Only Conceptual Model Pages"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DiagramObjectDataInclusionQuestion.java:40
-msgid "Conceptual Model Data"
+msgid "Only Results Chains"
 msgstr ""
 
 #: Miradi/source/org/miradi/diagram/arranger/MeglerArranger.java:78
