--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-22 12:11-0500\n"
+"POT-Creation-Date: 2010-04-22 12:22-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -4910,6 +4910,12 @@ msgstr ""
 
 #: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:83
 msgid "Enter As: "
+msgstr ""
+
+#: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:87
+msgid ""
+"<html>Specifying when this work item will take place using this dialog<br> "
+"will enter zeros in the appropriate time period(s) for this work item."
 msgstr ""
 
 #: Miradi/source/org/miradi/dialogfields/editors/DateUnitStartAndEndCard.java:31
