--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-22 12:11-0500\n"
+"POT-Creation-Date: 2010-04-22 12:22-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -4639,6 +4639,12 @@ msgstr ""
 
 #: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:83
 msgid "Enter As: "
+msgstr ""
+
+#: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:87
+msgid ""
+"<html>Specifying when this work item will take place using this dialog<br> "
+"will enter zeros in the appropriate time period(s) for this work item."
 msgstr ""
 
 #: Miradi/source/org/miradi/dialogfields/editors/DateUnitStartAndEndCard.java:31
