--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-22 12:22-0500\n"
+"POT-Creation-Date: 2010-04-22 12:25-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -1775,7 +1775,6 @@ msgstr ""
 "una tarea está representada por un óvalo plano gris."
 
 #: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:207
-#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:50
 msgid "Quarter"
 msgstr "Trimestre "
 
@@ -2858,23 +2857,27 @@ msgid "Intensive Assessment"
 msgstr "Evaluación intensiva "
 
 #: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:45
-msgid "None"
+msgid "Unscheduled"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:47
-msgid "Project Total"
+msgid "Entire Project Duration"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:48
-msgid "Year"
+msgid "Specific Year(s)"
+msgstr ""
+
+#: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:50
+msgid "Specific Quarter(s)"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:52
-msgid "Month"
+msgid "Specific Month(s)"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/DateUnitTypeQuestion.java:53
-msgid "Day"
+msgid "Specific Day(s)"
 msgstr ""
 
 #: Miradi/source/org/miradi/questions/TextBoxZOrderQuestion.java:34
@@ -4908,14 +4911,14 @@ msgstr ""
 msgid "Quarter Selection: "
 msgstr ""
 
-#: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:83
-msgid "Enter As: "
-msgstr ""
-
-#: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:87
+#: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:80
 msgid ""
 "<html>Specifying when this work item will take place using this dialog<br> "
 "will enter zeros in the appropriate time period(s) for this work item."
+msgstr ""
+
+#: Miradi/source/org/miradi/dialogfields/editors/WhenEditorComponent.java:85
+msgid "Enter As: "
 msgstr ""
 
 #: Miradi/source/org/miradi/dialogfields/editors/DateUnitStartAndEndCard.java:31
