--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 10:32-0500\n"
+"POT-Creation-Date: 2010-04-23 10:36-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -854,8 +854,10 @@ msgstr "Estrategia nueva"
 
 #: Miradi/source/org/miradi/views/diagram/CreateResultsChainDoer.java:89
 msgid ""
-"Annotionats were removed from Contributing Factor/Threat and attached to "
-"Intermediate Result/Threat Reduction Result"
+"Any Indicators or Objectives that were associated to Contributing Factors or "
+"Threats \n"
+"have been moved to the corresponding Threat Reduction Result or Intermediate "
+"Result"
 msgstr ""
 
 #: Miradi/source/org/miradi/views/diagram/InsertThreatReductionResultDoer.java:43
