--- a/translations/miradi_id.po
+++ b/translations/miradi_id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 10:32-0500\n"
+"POT-Creation-Date: 2010-04-23 10:36-0500\n"
 "PO-Revision-Date: 2009-12-17 09:22-0500\n"
 "Last-Translator: Lucy Tickell <ltickell@globalarena.com>\n"
 "Language-Team: Indonesian\n"
@@ -855,8 +855,10 @@ msgstr "Strategi Baru "
 
 #: Miradi/source/org/miradi/views/diagram/CreateResultsChainDoer.java:89
 msgid ""
-"Annotionats were removed from Contributing Factor/Threat and attached to "
-"Intermediate Result/Threat Reduction Result"
+"Any Indicators or Objectives that were associated to Contributing Factors or "
+"Threats \n"
+"have been moved to the corresponding Threat Reduction Result or Intermediate "
+"Result"
 msgstr ""
 
 #: Miradi/source/org/miradi/views/diagram/InsertThreatReductionResultDoer.java:43
