--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-26 16:20-0500\n"
+"POT-Creation-Date: 2010-04-26 18:50-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -5745,7 +5745,7 @@ msgid "TT|Delete the selected item"
 msgstr "删除选定的条目 \t\t"
 
 #: Miradi/source/org/miradi/actions/ActionPlanningColumnsEditor.java:34
-msgid "Action|Table|Edit Columns..."
+msgid "Action|Table|Show Columns..."
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionPlanningColumnsEditor.java:39
@@ -6017,7 +6017,7 @@ msgid "TT|Edit the methods for this indicator"
 msgstr "为该指示物编辑方法 \t\t"
 
 #: Miradi/source/org/miradi/actions/ActionPlanningRowsEditor.java:34
-msgid "Action|Table|Edit Rows..."
+msgid "Action|Table|Show Rows..."
 msgstr ""
 
 #: Miradi/source/org/miradi/actions/ActionPlanningRowsEditor.java:39
