Hudson build: hudson-Miradi-5413; 2010-07-02_12-25-59

--- a/translations/miradi_id.po
+++ b/translations/miradi_id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-02 12:23-0500\n"
+"POT-Creation-Date: 2010-07-02 12:26-0500\n"
 "PO-Revision-Date: 2009-12-17 09:22-0500\n"
 "Last-Translator: Lucy Tickell <ltickell@globalarena.com>\n"
 "Language-Team: Indonesian\n"
@@ -3274,7 +3274,9 @@ msgid "External Research"
 msgstr "Penelitian Eksternal"
 
 #: Miradi/source/org/miradi/dialogfields/RollupReportsEditorComponent.java:71
-msgid "Extra/unexpected configuration data was found, and will be ignored."
+msgid ""
+"Extra/unexpected configuration data was found, and will be ignored.\n"
+" CodeList= %s"
 msgstr ""
 
 #: Miradi/source/org/miradi/diagram/arranger/MeglerArranger.java:570
