--- a/translations/miradi_it.po
+++ b/translations/miradi_it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Miradi-3.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-02 12:23-0500\n"
+"POT-Creation-Date: 2010-07-02 12:26-0500\n"
 "PO-Revision-Date: 2010-05-12 21:01-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -3061,7 +3061,9 @@ msgid "External Research"
 msgstr ""
 
 #: Miradi/source/org/miradi/dialogfields/RollupReportsEditorComponent.java:71
-msgid "Extra/unexpected configuration data was found, and will be ignored."
+msgid ""
+"Extra/unexpected configuration data was found, and will be ignored.\n"
+" CodeList= %s"
 msgstr ""
 
 #: Miradi/source/org/miradi/diagram/arranger/MeglerArranger.java:570
