--- a/translations/miradi_zh.po
+++ b/translations/miradi_zh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-02 12:23-0500\n"
+"POT-Creation-Date: 2010-07-02 12:26-0500\n"
 "PO-Revision-Date: 2009-09-16 11:23-0800\n"
 "Last-Translator: ab\n"
 "Language-Team: Chinese\n"
@@ -3145,7 +3145,9 @@ msgid "External Research"
 msgstr "外部研究"
 
 #: Miradi/source/org/miradi/dialogfields/RollupReportsEditorComponent.java:71
-msgid "Extra/unexpected configuration data was found, and will be ignored."
+msgid ""
+"Extra/unexpected configuration data was found, and will be ignored.\n"
+" CodeList= %s"
 msgstr ""
 
 #: Miradi/source/org/miradi/diagram/arranger/MeglerArranger.java:570
