Hudson build: hudson-Miradi-5661; 2010-07-16_16-10-01

--- a/translations/miradi_es.po
+++ b/translations/miradi_es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-16 15:34-0500\n"
+"POT-Creation-Date: 2010-07-16 16:10-0500\n"
 "PO-Revision-Date: 2010-01-14 18:04-0500\n"
 "Last-Translator: Carly <cgordon@globalarena.com>\n"
 "Language-Team: Spanish\n"
@@ -8735,15 +8735,14 @@ msgid "FieldLabel|12.MetaBudgetDetailColumnCode|Budget Totals"
 msgstr "Totales del presupuesto"
 
 msgid ""
-"FieldLabel|12.MetaRollupReportsWorkUnitsColumnCode|Rollup Work Units Report"
+"FieldLabel|12.MetaAnalysisWorkUnitsColumnCode|Analysis Work Units Report"
+msgstr ""
+
+msgid "FieldLabel|12.MetaAnalysisExpensesColumnCode|Analysis Expenses Report"
 msgstr ""
 
 msgid ""
-"FieldLabel|12.MetaRollupReportsExpensesColumnCode|Rollup Expenses Report"
-msgstr ""
-
-msgid ""
-"FieldLabel|12.MetaRollupReportsBudgetDetailsColumnCode|Rollup Budget Details "
+"FieldLabel|12.MetaAnalysisBudgetDetailsColumnCode|Analysis Budget Details "
 "Report"
 msgstr ""
 
