--- a/translations/miradi_id.po
+++ b/translations/miradi_id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-16 15:34-0500\n"
+"POT-Creation-Date: 2010-07-16 16:10-0500\n"
 "PO-Revision-Date: 2009-12-17 09:22-0500\n"
 "Last-Translator: Lucy Tickell <ltickell@globalarena.com>\n"
 "Language-Team: Indonesian\n"
@@ -8698,15 +8698,14 @@ msgid "FieldLabel|12.MetaBudgetDetailColumnCode|Budget Totals"
 msgstr "Total Anggaran "
 
 msgid ""
-"FieldLabel|12.MetaRollupReportsWorkUnitsColumnCode|Rollup Work Units Report"
+"FieldLabel|12.MetaAnalysisWorkUnitsColumnCode|Analysis Work Units Report"
+msgstr ""
+
+msgid "FieldLabel|12.MetaAnalysisExpensesColumnCode|Analysis Expenses Report"
 msgstr ""
 
 msgid ""
-"FieldLabel|12.MetaRollupReportsExpensesColumnCode|Rollup Expenses Report"
-msgstr ""
-
-msgid ""
-"FieldLabel|12.MetaRollupReportsBudgetDetailsColumnCode|Rollup Budget Details "
+"FieldLabel|12.MetaAnalysisBudgetDetailsColumnCode|Analysis Budget Details "
 "Report"
 msgstr ""
 
