--- a/translations/miradi_uk.po
+++ b/translations/miradi_uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: j 2ee-hudson\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-16 15:34-0500\n"
+"POT-Creation-Date: 2010-07-16 16:10-0500\n"
 "PO-Revision-Date: 2010-05-12 13:30-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -8215,15 +8215,14 @@ msgid "FieldLabel|12.MetaBudgetDetailColumnCode|Budget Totals"
 msgstr ""
 
 msgid ""
-"FieldLabel|12.MetaRollupReportsWorkUnitsColumnCode|Rollup Work Units Report"
+"FieldLabel|12.MetaAnalysisWorkUnitsColumnCode|Analysis Work Units Report"
+msgstr ""
+
+msgid "FieldLabel|12.MetaAnalysisExpensesColumnCode|Analysis Expenses Report"
 msgstr ""
 
 msgid ""
-"FieldLabel|12.MetaRollupReportsExpensesColumnCode|Rollup Expenses Report"
-msgstr ""
-
-msgid ""
-"FieldLabel|12.MetaRollupReportsBudgetDetailsColumnCode|Rollup Budget Details "
+"FieldLabel|12.MetaAnalysisBudgetDetailsColumnCode|Analysis Budget Details "
 "Report"
 msgstr ""
 
