Hudson build: hudson-Miradi-5847; 2010-07-29_14-51-59

--- a/translations/miradi_it.po
+++ b/translations/miradi_it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Miradi-3.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-29 12:16-0500\n"
+"POT-Creation-Date: 2010-07-29 14:53-0500\n"
 "PO-Revision-Date: 2010-05-12 21:01-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -4682,7 +4682,8 @@ msgid ""
 "Open Standards for the Practice of Conservation - A series of best practices "
 "for designing, managing, monitoring, and learning from conservation "
 "projects. The basis for Miradi. You can download a copy of the Open "
-"Standards at www.ConservationMeasures.org"
+"Standards at <a href='http://www.ConservationMeasures.org'>www."
+"ConservationMeasures.org<a>"
 msgstr ""
 
 #: Miradi/source/org/miradi/views/umbrella/DefinitionCommonTerms.java:263
