Hudson build: hudson-Miradi-5855; 2010-08-02_14-34-00

--- a/translations/miradi_mn.po
+++ b/translations/miradi_mn.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: j 2ee-hudson\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-29 14:53-0500\n"
+"POT-Creation-Date: 2010-08-02 14:35-0500\n"
 "PO-Revision-Date: 2010-06-07 17:23-0500\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -13801,10 +13801,10 @@ msgid ""
 "Standards</EM> and Training Materials </LI></UL><HR><H3>Technical "
 "Contributions Drawn From</H3><UL>  <LI><STRONG>Third Party Libraries:</"
 "STRONG> BrowserLauncher,   JCalendar, JGraph, JHLabs, Jing, JTreeTable, "
-"JarBuilder, install4j   <LI><STRONG>Development Tools:</STRONG> Ant, CVS, "
-"Eclipse, Java, JUnit, NSIS, POEdit, Ruby, Subversion   <LI><STRONG>Martus:</"
-"STRONG> Benetech's software for human rights groups</LI></UL><P><FONT "
-"size=2>&nbsp;</P></FONT></BODY></HTML>"
+"JarBuilder, install4j, JOrtho  <LI><STRONG>Development Tools:</STRONG> Ant, "
+"CVS, Eclipse, Java, JUnit, NSIS, POEdit, Ruby, Subversion   "
+"<LI><STRONG>Martus:</STRONG> Benetech's software for human rights groups</"
+"LI></UL><P><FONT size=2>&nbsp;</P></FONT></BODY></HTML>"
 msgstr ""
 
 msgid ""
